--- a/.godot/global_script_class_cache.cfg
+++ b/.godot/global_script_class_cache.cfg
@@ -13,7 +13,7 @@ list=[{
 "is_abstract": false,
 "is_tool": false,
 "language": &"GDScript",
-"path": "res://Scripts/CameraRig/CameraCinema.gd"
+"path": "res://Scripts/Camera/old/CameraCinema.gd"
 }, {
 "base": &"Node",
 "class": &"CameraResponder",
@@ -21,7 +21,71 @@ list=[{
 "is_abstract": false,
 "is_tool": false,
 "language": &"GDScript",
-"path": "res://Scripts/CameraRig/CameraResponder.gd"
+"path": "res://Scripts/Camera/old/CameraResponder.gd"
+}, {
+"base": &"CameraResponseBase",
+"class": &"CameraResponseAirborne",
+"icon": "",
+"is_abstract": false,
+"is_tool": false,
+"language": &"GDScript",
+"path": "res://Scripts/Camera/Responses/CameraResponseAirborne.gd"
+}, {
+"base": &"Node",
+"class": &"CameraResponseBase",
+"icon": "",
+"is_abstract": false,
+"is_tool": false,
+"language": &"GDScript",
+"path": "res://Scripts/Camera/CameraResponseBase.gd"
+}, {
+"base": &"CameraResponseBase",
+"class": &"CameraResponseIdle",
+"icon": "",
+"is_abstract": false,
+"is_tool": false,
+"language": &"GDScript",
+"path": "res://Scripts/Camera/Responses/CameraResponseIdle.gd"
+}, {
+"base": &"CameraResponseBase",
+"class": &"CameraResponseJumping",
+"icon": "",
+"is_abstract": false,
+"is_tool": false,
+"language": &"GDScript",
+"path": "res://Scripts/Camera/Responses/CameraResponseJumping.gd"
+}, {
+"base": &"CameraResponseBase",
+"class": &"CameraResponseLanding",
+"icon": "",
+"is_abstract": false,
+"is_tool": false,
+"language": &"GDScript",
+"path": "res://Scripts/Camera/Responses/CameraResponseLanding.gd"
+}, {
+"base": &"CameraResponseBase",
+"class": &"CameraResponseRunning",
+"icon": "",
+"is_abstract": false,
+"is_tool": false,
+"language": &"GDScript",
+"path": "res://Scripts/Camera/Responses/CameraResponseRunning.gd"
+}, {
+"base": &"CameraResponseBase",
+"class": &"CameraResponseWalking",
+"icon": "",
+"is_abstract": false,
+"is_tool": false,
+"language": &"GDScript",
+"path": "res://Scripts/Camera/Responses/CameraResponseWalking.gd"
+}, {
+"base": &"Node",
+"class": &"CameraStateMachine",
+"icon": "",
+"is_abstract": false,
+"is_tool": false,
+"language": &"GDScript",
+"path": "res://Scripts/Camera/CameraStateMachine.gd"
 }, {
 "base": &"State",
 "class": &"CharacterStateBase",
@@ -29,7 +93,7 @@ list=[{
 "is_abstract": false,
 "is_tool": false,
 "language": &"GDScript",
-"path": "res://Scripts/CharacterStateMachine/CharacterStatesBase.gd"
+"path": "res://Scripts/Character/CharacterStatesBase.gd"
 }, {
 "base": &"Node",
 "class": &"CharacterStateMachine",
@@ -37,7 +101,7 @@ list=[{
 "is_abstract": false,
 "is_tool": false,
 "language": &"GDScript",
-"path": "res://Scripts/CharacterStateMachine/CharacterStateMachine.gd"
+"path": "res://Scripts/Character/CharacterStateMachine.gd"
 }, {
 "base": &"Node",
 "class": &"ClickNavigationComponent",
@@ -61,7 +125,7 @@ list=[{
 "is_abstract": false,
 "is_tool": false,
 "language": &"GDScript",
-"path": "res://Scripts/CharacterStateMachine/State.gd"
+"path": "res://Scripts/Character/State.gd"
 }, {
 "base": &"CharacterStateBase",
 "class": &"StateAirborne",
@@ -69,7 +133,7 @@ list=[{
 "is_abstract": false,
 "is_tool": false,
 "language": &"GDScript",
-"path": "res://Scripts/CharacterStateMachine/States/StateAirborne.gd"
+"path": "res://Scripts/Character/States/StateAirborne.gd"
 }, {
 "base": &"CharacterStateBase",
 "class": &"StateIdle",
@@ -77,7 +141,7 @@ list=[{
 "is_abstract": false,
 "is_tool": false,
 "language": &"GDScript",
-"path": "res://Scripts/CharacterStateMachine/States/StateIdle.gd"
+"path": "res://Scripts/Character/States/StateIdle.gd"
 }, {
 "base": &"CharacterStateBase",
 "class": &"StateJumping",
@@ -85,7 +149,7 @@ list=[{
 "is_abstract": false,
 "is_tool": false,
 "language": &"GDScript",
-"path": "res://Scripts/CharacterStateMachine/States/StateJumping.gd"
+"path": "res://Scripts/Character/States/StateJumping.gd"
 }, {
 "base": &"CharacterStateBase",
 "class": &"StateLanding",
@@ -93,7 +157,7 @@ list=[{
 "is_abstract": false,
 "is_tool": false,
 "language": &"GDScript",
-"path": "res://Scripts/CharacterStateMachine/States/StateLanding.gd"
+"path": "res://Scripts/Character/States/StateLanding.gd"
 }, {
 "base": &"CharacterStateBase",
 "class": &"StateRunning",
@@ -101,7 +165,7 @@ list=[{
 "is_abstract": false,
 "is_tool": false,
 "language": &"GDScript",
-"path": "res://Scripts/CharacterStateMachine/States/StateRunning.gd"
+"path": "res://Scripts/Character/States/StateRunning.gd"
 }, {
 "base": &"CharacterStateBase",
 "class": &"StateWalking",
@@ -109,5 +173,5 @@ list=[{
 "is_abstract": false,
 "is_tool": false,
 "language": &"GDScript",
-"path": "res://Scripts/CharacterStateMachine/States/StateWalking.gd"
+"path": "res://Scripts/Character/States/StateWalking.gd"
 }]
