--- a/.godot/global_script_class_cache.cfg
+++ b/.godot/global_script_class_cache.cfg
@@ -13,15 +13,7 @@ list=[{
 "is_abstract": false,
 "is_tool": false,
 "language": &"GDScript",
-"path": "res://Scripts/Camera/old/CameraCinema.gd"
-}, {
-"base": &"Node",
-"class": &"CameraResponder",
-"icon": "",
-"is_abstract": false,
-"is_tool": false,
-"language": &"GDScript",
-"path": "res://Scripts/Camera/old/CameraResponder.gd"
+"path": "res://Scripts/Camera/CameraCinema.gd"
 }, {
 "base": &"CameraResponseBase",
 "class": &"CameraResponseAirborne",
@@ -118,6 +110,14 @@ list=[{
 "is_tool": false,
 "language": &"GDScript",
 "path": "res://Scripts/InputComponents/GamepadComponent.gd"
+}, {
+"base": &"Node",
+"class": &"InputManager",
+"icon": "",
+"is_abstract": false,
+"is_tool": false,
+"language": &"GDScript",
+"path": "res://Scripts/Components/InputManager.gd"
 }, {
 "base": &"Node",
 "class": &"State",
