--- a/.godot/global_script_class_cache.cfg
+++ b/.godot/global_script_class_cache.cfg
@@ -120,6 +120,14 @@ list=[{
 "path": "res://Scripts/Components/InputManager.gd"
 }, {
 "base": &"Node",
+"class": &"JumpSystem",
+"icon": "",
+"is_abstract": false,
+"is_tool": false,
+"language": &"GDScript",
+"path": "res://Scripts/Components/JumpSystem.gd"
+}, {
+"base": &"Node",
 "class": &"State",
 "icon": "",
 "is_abstract": false,
