--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -34,8 +34,8 @@ state={
 "column": 12,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 114,
-"scroll_position": 84.4,
+"row": 129,
+"scroll_position": 102.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -73,11 +73,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 17,
+"column": 40,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 309,
-"scroll_position": 259.0,
+"row": 225,
+"scroll_position": 200.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -390,6 +390,20 @@ state={
 "h_scroll_position": 0,
 "row": 151,
 "scroll_position": 112.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://Scripts/_Debug/CharacterDebugHelper.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 16,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 233,
+"scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
