--- a/.godot/global_script_class_cache.cfg
+++ b/.godot/global_script_class_cache.cfg
@@ -79,6 +79,14 @@ list=[{
 "language": &"GDScript",
 "path": "res://Scripts/Camera/CameraStateMachine.gd"
 }, {
+"base": &"Node",
+"class": &"CharacterDebugHelper",
+"icon": "",
+"is_abstract": false,
+"is_tool": false,
+"language": &"GDScript",
+"path": "res://Scripts/_Debug/CharacterDebugHelper.gd"
+}, {
 "base": &"State",
 "class": &"CharacterStateBase",
 "icon": "",
