--- a/.godot/global_script_class_cache.cfg
+++ b/.godot/global_script_class_cache.cfg
@@ -15,6 +15,14 @@ list=[{
 "language": &"GDScript",
 "path": "res://Scripts/Camera/CameraCinema.gd"
 }, {
+"base": &"Node",
+"class": &"CameraResponder",
+"icon": "",
+"is_abstract": false,
+"is_tool": false,
+"language": &"GDScript",
+"path": "res://Scripts/CameraRig/CameraResponder.gd"
+}, {
 "base": &"CameraResponseBase",
 "class": &"CameraResponseAirborne",
 "icon": "",
