--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -9,8 +9,8 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://Scripts/_Debug/CharacterDebugHelper.gd")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Scripts/", "res://Scripts/Components/", "res://Scripts/Character/", "res://Scripts/Character/States/", "res://Scripts/_Debug/", "res://Assets/")
+dock_filesystem_selected_paths=PackedStringArray()
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Scripts/", "res://Scripts/Components/", "res://Scripts/Character/", "res://Scripts/Character/States/", "res://Scripts/Camera/", "res://Scripts/_Debug/", "res://Assets/")
 dock_node_current_tab=0
 dock_history_include_scene=true
 dock_history_include_global=true
@@ -30,22 +30,22 @@ dock_5="Inspector,Node,History"
 
 open_scenes=PackedStringArray("res://SCENE.tscn", "res://Assets/ps_character_gurl.tscn")
 current_scene="res://SCENE.tscn"
-center_split_offset=-719
-selected_default_debugger_tab_idx=0
+center_split_offset=-314
+selected_default_debugger_tab_idx=1
 selected_main_editor_idx=2
 selected_bottom_panel_item=0
 
 [EditorWindow]
 
 screen=0
-mode="maximized"
-position=Vector2i(3840, 29)
-size=Vector2i(3248, 1530)
+mode="windowed"
+position=Vector2i(4264, 285)
+size=Vector2i(3248, 1669)
 
 [ScriptEditor]
 
 open_scripts=["res://Scripts/Controllers/AnimationController.gd", "res://Scripts/Camera/CameraCinema.gd", "res://Scripts/Camera/Responses/CameraResponseAirborne.gd", "res://Scripts/Camera/CameraResponseBase.gd", "res://Scripts/Camera/Responses/CameraResponseIdle.gd", "res://Scripts/Camera/Responses/CameraResponseJumping.gd", "res://Scripts/Camera/Responses/CameraResponseLanding.gd", "res://Scripts/Camera/Responses/CameraResponseRunning.gd", "res://Scripts/Camera/Responses/CameraResponseWalking.gd", "res://Scripts/Camera/CameraStateMachine.gd", "res://Scripts/_Debug/CharacterDebugHelper.gd", "res://Scripts/Character/CharacterStateMachine.gd", "res://Scripts/Character/CharacterStatesBase.gd", "res://character_controller_plan.md", "res://Scripts/InputComponents/ClickNavigationComponent.gd", "res://Scripts/Controllers/ControllerCamera.gd", "res://Scripts/Controllers/ControllerCharacter.gd", "res://Scripts/_Debug/DebugUI.gd", "res://Scripts/InputComponents/GamepadComponent.gd", "res://Scripts/Components/InputManager.gd", "res://Scripts/Components/JumpSystem.gd", "res://Scripts/Character/State.gd", "res://Scripts/Character/States/StateAirborne.gd", "res://Scripts/Character/States/StateIdle.gd", "res://Scripts/Character/States/StateJumping.gd", "res://Scripts/Character/States/StateLanding.gd", "res://Scripts/Character/States/StateRunning.gd", "res://Scripts/Character/States/StateWalking.gd"]
-selected_script="res://Scripts/_Debug/DebugUI.gd"
+selected_script="res://character_controller_plan.md"
 open_help=[]
 script_split_offset=520
 list_split_offset=0
