--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -45,9 +45,9 @@ size=Vector2i(3248, 1669)
 [ScriptEditor]
 
 open_scripts=["res://Scripts/Controllers/AnimationController.gd", "res://Scripts/Camera/CameraCinema.gd", "res://Scripts/Camera/Responses/CameraResponseAirborne.gd", "res://Scripts/Camera/CameraResponseBase.gd", "res://Scripts/Camera/Responses/CameraResponseIdle.gd", "res://Scripts/Camera/Responses/CameraResponseJumping.gd", "res://Scripts/Camera/Responses/CameraResponseLanding.gd", "res://Scripts/Camera/Responses/CameraResponseRunning.gd", "res://Scripts/Camera/Responses/CameraResponseWalking.gd", "res://Scripts/Camera/CameraStateMachine.gd", "res://Scripts/_Debug/CharacterDebugHelper.gd", "res://Scripts/Character/CharacterStateMachine.gd", "res://Scripts/Character/CharacterStatesBase.gd", "res://character_controller_plan.md", "res://Scripts/InputComponents/ClickNavigationComponent.gd", "res://Scripts/Controllers/ControllerCamera.gd", "res://Scripts/Controllers/ControllerCharacter.gd", "res://Scripts/_Debug/DebugUI.gd", "res://Scripts/InputComponents/GamepadComponent.gd", "res://Scripts/Components/InputManager.gd", "res://Scripts/Components/JumpSystem.gd", "res://Scripts/Character/State.gd", "res://Scripts/Character/States/StateAirborne.gd", "res://Scripts/Character/States/StateIdle.gd", "res://Scripts/Character/States/StateJumping.gd", "res://Scripts/Character/States/StateLanding.gd", "res://Scripts/Character/States/StateRunning.gd", "res://Scripts/Character/States/StateWalking.gd"]
-selected_script="res://character_controller_plan.md"
+selected_script="res://Scripts/Controllers/ControllerCharacter.gd"
 open_help=[]
-script_split_offset=520
+script_split_offset=522
 list_split_offset=0
 zoom_factor=nan
 
