--- a/.godot/global_script_class_cache.cfg
+++ b/.godot/global_script_class_cache.cfg
@@ -1,4 +1,20 @@
 list=[{
+"base": &"RefCounted",
+"class": &"Action",
+"icon": "",
+"is_abstract": false,
+"is_tool": false,
+"language": &"GDScript",
+"path": "res://Scripts/ActionSystem/Action.gd"
+}, {
+"base": &"Node",
+"class": &"ActionSystem",
+"icon": "",
+"is_abstract": false,
+"is_tool": false,
+"language": &"GDScript",
+"path": "res://Scripts/ActionSystem/ActionSystem.gd"
+}, {
 "base": &"Node",
 "class": &"AnimationController",
 "icon": "",
