--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -9,8 +9,8 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://Scripts/ActionSystem/ActionSystem.gd")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Scripts/", "res://Scripts/Components/", "res://Scripts/Character/", "res://Scripts/Character/States/", "res://Scripts/Camera/", "res://Scripts/Camera/Responses/", "res://Scripts/ActionSystem/", "res://Scripts/_Debug/")
+dock_filesystem_selected_paths=PackedStringArray("res://Scripts/_Debug/CharacterDebugHelper.gd")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Scripts/", "res://Scripts/InputComponents/", "res://Scripts/Controllers/", "res://Scripts/Components/", "res://Scripts/Character/", "res://Scripts/Character/States/", "res://Scripts/CameraRig/", "res://Scripts/Camera/", "res://Scripts/Camera/Responses/", "res://Scripts/ActionSystem/", "res://Scripts/_Debug/")
 dock_node_current_tab=0
 dock_history_include_scene=true
 dock_history_include_global=true
@@ -33,7 +33,7 @@ current_scene="res://SCENE.tscn"
 center_split_offset=-732
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=2
-selected_bottom_panel_item=1
+selected_bottom_panel_item=0
 
 [EditorWindow]
 
@@ -67,7 +67,7 @@ text_shader_zoom_factor=1.0
 
 log_filter_0=true
 log_filter_2=true
-log_filter_1=true
+log_filter_1=false
 log_filter_3=true
 log_filter_4=true
 collapse=false
