--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -31,11 +31,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 40,
+"column": 12,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 316,
-"scroll_position": 281.0,
+"row": 146,
+"scroll_position": 113.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -357,7 +357,7 @@ state={
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 264,
-"scroll_position": 227.0,
+"scroll_position": 206.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -381,12 +381,16 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 22,
+"column": 112,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 192,
-"scroll_position": 167.0,
-"selection": false,
+"row": 134,
+"scroll_position": 111.0,
+"selection": true,
+"selection_from_column": 101,
+"selection_from_line": 134,
+"selection_to_column": 112,
+"selection_to_line": 134,
 "syntax_highlighter": "GDScript"
 }
 
@@ -395,11 +399,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 73,
+"column": 2,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 75,
-"scroll_position": 30.0,
+"row": 211,
+"scroll_position": 175.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
