removed legacy frame based code

--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -381,16 +381,12 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 112,
+"column": 37,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 134,
-"scroll_position": 111.0,
-"selection": true,
-"selection_from_column": 101,
-"selection_from_line": 134,
-"selection_to_column": 112,
-"selection_to_line": 134,
+"row": 137,
+"scroll_position": 102.0,
+"selection": false,
 "syntax_highlighter": "GDScript"
 }
 
@@ -399,11 +395,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 8,
+"column": 30,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 19,
-"scroll_position": 0.0,
+"row": 78,
+"scroll_position": 64.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
