--- a/.godot/global_script_class_cache.cfg
+++ b/.godot/global_script_class_cache.cfg
@@ -32,76 +32,28 @@ list=[{
 "path": "res://Scripts/Camera/CameraCinema.gd"
 }, {
 "base": &"Node",
-"class": &"CameraResponder",
+"class": &"CameraComponent",
 "icon": "",
 "is_abstract": false,
 "is_tool": false,
 "language": &"GDScript",
-"path": "res://Scripts/CameraRig/CameraResponder.gd"
+"path": "res://Scripts/Camera/CameraComponent.gd"
 }, {
-"base": &"CameraResponseBase",
-"class": &"CameraResponseAirborne",
+"base": &"Node3D",
+"class": &"CameraManager",
 "icon": "",
 "is_abstract": false,
 "is_tool": false,
 "language": &"GDScript",
-"path": "res://Scripts/Camera/Responses/CameraResponseAirborne.gd"
+"path": "res://Scripts/Camera/CameraManager.gd"
 }, {
-"base": &"Node",
-"class": &"CameraResponseBase",
+"base": &"RefCounted",
+"class": &"CameraProperties",
 "icon": "",
 "is_abstract": false,
 "is_tool": false,
 "language": &"GDScript",
-"path": "res://Scripts/Camera/CameraResponseBase.gd"
-}, {
-"base": &"CameraResponseBase",
-"class": &"CameraResponseIdle",
-"icon": "",
-"is_abstract": false,
-"is_tool": false,
-"language": &"GDScript",
-"path": "res://Scripts/Camera/Responses/CameraResponseIdle.gd"
-}, {
-"base": &"CameraResponseBase",
-"class": &"CameraResponseJumping",
-"icon": "",
-"is_abstract": false,
-"is_tool": false,
-"language": &"GDScript",
-"path": "res://Scripts/Camera/Responses/CameraResponseJumping.gd"
-}, {
-"base": &"CameraResponseBase",
-"class": &"CameraResponseLanding",
-"icon": "",
-"is_abstract": false,
-"is_tool": false,
-"language": &"GDScript",
-"path": "res://Scripts/Camera/Responses/CameraResponseLanding.gd"
-}, {
-"base": &"CameraResponseBase",
-"class": &"CameraResponseRunning",
-"icon": "",
-"is_abstract": false,
-"is_tool": false,
-"language": &"GDScript",
-"path": "res://Scripts/Camera/Responses/CameraResponseRunning.gd"
-}, {
-"base": &"CameraResponseBase",
-"class": &"CameraResponseWalking",
-"icon": "",
-"is_abstract": false,
-"is_tool": false,
-"language": &"GDScript",
-"path": "res://Scripts/Camera/Responses/CameraResponseWalking.gd"
-}, {
-"base": &"Node",
-"class": &"CameraStateMachine",
-"icon": "",
-"is_abstract": false,
-"is_tool": false,
-"language": &"GDScript",
-"path": "res://Scripts/Camera/CameraStateMachine.gd"
+"path": "res://Scripts/Camera/CameraProperties.gd"
 }, {
 "base": &"Node",
 "class": &"CharacterDebugHelper",
@@ -127,6 +79,14 @@ list=[{
 "language": &"GDScript",
 "path": "res://Scripts/Character/CharacterStateMachine.gd"
 }, {
+"base": &"CameraComponent",
+"class": &"ClickFollowCameraComponent",
+"icon": "",
+"is_abstract": false,
+"is_tool": false,
+"language": &"GDScript",
+"path": "res://Scripts/Camera/ClickFollowCameraComponent.gd"
+}, {
 "base": &"Node",
 "class": &"ClickNavigationComponent",
 "icon": "",
@@ -134,6 +94,14 @@ list=[{
 "is_tool": false,
 "language": &"GDScript",
 "path": "res://Scripts/InputComponents/ClickNavigationComponent.gd"
+}, {
+"base": &"CameraComponent",
+"class": &"FollowCameraComponent",
+"icon": "",
+"is_abstract": false,
+"is_tool": false,
+"language": &"GDScript",
+"path": "res://Scripts/Camera/FollowCameraComponent.gd"
 }, {
 "base": &"Node",
 "class": &"GamepadInputComponent",
