--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -9,8 +9,8 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://Scripts/Character/CharacterStateMachine.gd")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Scripts/", "res://Scripts/InputComponents/", "res://Scripts/Controllers/", "res://Scripts/Components/", "res://Scripts/Character/", "res://Scripts/Character/States/", "res://Scripts/Camera/", "res://Scripts/ActionSystem/", "res://Scripts/_Debug/")
+dock_filesystem_selected_paths=PackedStringArray()
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Scripts/", "res://Scripts/InputComponents/", "res://Scripts/Controllers/", "res://Scripts/Components/", "res://Scripts/Character/", "res://Scripts/Camera/", "res://Scripts/ActionSystem/", "res://Scripts/_Debug/")
 dock_node_current_tab=0
 dock_history_include_scene=true
 dock_history_include_global=true
@@ -44,8 +44,8 @@ size=Vector2i(3248, 1669)
 
 [ScriptEditor]
 
-open_scripts=["res://Scripts/ActionSystem/Action.gd", "res://Scripts/ActionSystem/ActionSystem.gd", "res://Scripts/Controllers/AnimationController.gd", "res://Scripts/Camera/CameraCinema.gd", "res://Scripts/Camera/CameraComponent.gd", "res://Scripts/Camera/CameraManager.gd", "res://Scripts/Camera/CameraProperties.gd", "res://Scripts/_Debug/CharacterDebugHelper.gd", "res://Scripts/Character/CharacterStateMachine.gd", "res://Scripts/Character/CharacterStatesBase.gd", "res://character_controller_plan.md", "res://Scripts/Camera/ClickFollowCameraComponent.gd", "res://Scripts/InputComponents/ClickNavigationComponent.gd", "res://Scripts/Controllers/ControllerCamera.gd", "res://Scripts/Controllers/ControllerCharacter.gd", "res://Scripts/_Debug/DebugUI.gd", "res://Scripts/Camera/FollowCameraComponent.gd", "res://Scripts/InputComponents/GamepadComponent.gd", "res://Scripts/Components/InputManager.gd", "res://Scripts/Components/JumpSystem.gd", "res://Scripts/Character/State.gd", "res://Scripts/Character/States/StateAirborne.gd", "res://Scripts/Character/States/StateIdle.gd", "res://Scripts/Character/States/StateJumping.gd", "res://Scripts/Character/States/StateLanding.gd", "res://Scripts/Character/States/StateRunning.gd", "res://Scripts/Character/States/StateWalking.gd"]
-selected_script="res://Scripts/Character/States/StateJumping.gd"
+open_scripts=["res://Scripts/ActionSystem/Action.gd", "res://Scripts/ActionSystem/ActionSystem.gd", "res://Scripts/Controllers/AnimationController.gd", "res://Scripts/Camera/CameraComponent.gd", "res://Scripts/Camera/CameraManager.gd", "res://Scripts/Camera/CameraProperties.gd", "res://Scripts/_Debug/CharacterDebugHelper.gd", "res://Scripts/Character/CharacterStateMachine.gd", "res://Scripts/Character/CharacterStatesBase.gd", "res://character_controller_plan.md", "res://Scripts/Camera/ClickFollowCameraComponent.gd", "res://Scripts/InputComponents/ClickNavigationComponent.gd", "res://Scripts/Controllers/ControllerCamera.gd", "res://Scripts/Controllers/ControllerCharacter.gd", "res://Scripts/_Debug/DebugUI.gd", "res://Scripts/Camera/FollowCameraComponent.gd", "res://Scripts/InputComponents/GamepadComponent.gd", "res://Scripts/Components/InputManager.gd", "res://Scripts/Components/JumpSystem.gd", "res://Scripts/Character/State.gd", "res://Scripts/Character/States/StateAirborne.gd", "res://Scripts/Character/States/StateIdle.gd", "res://Scripts/Character/States/StateJumping.gd", "res://Scripts/Character/States/StateLanding.gd", "res://Scripts/Character/States/StateRunning.gd", "res://Scripts/Character/States/StateWalking.gd"]
+selected_script="res://Scripts/Camera/FollowCameraComponent.gd"
 open_help=["GDScript"]
 script_split_offset=522
 list_split_offset=0
