--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -297,12 +297,16 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 30,
+"column": 20,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 346,
-"scroll_position": 312.0,
-"selection": false,
+"row": 241,
+"scroll_position": 223.0,
+"selection": true,
+"selection_from_column": 12,
+"selection_from_line": 241,
+"selection_to_column": 20,
+"selection_to_line": 241,
 "syntax_highlighter": "GDScript"
 }
 
@@ -325,11 +329,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 0,
+"column": 53,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 8,
-"scroll_position": 0.0,
+"row": 25,
+"scroll_position": 4.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -342,7 +346,7 @@ state={
 "column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 76,
+"row": 86,
 "scroll_position": 51.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
