--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -297,16 +297,12 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 20,
+"column": 30,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 241,
-"scroll_position": 223.0,
-"selection": true,
-"selection_from_column": 12,
-"selection_from_line": 241,
-"selection_to_column": 20,
-"selection_to_line": 241,
+"row": 346,
+"scroll_position": 312.0,
+"selection": false,
 "syntax_highlighter": "GDScript"
 }
 
@@ -329,11 +325,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 53,
+"column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 25,
-"scroll_position": 4.0,
+"row": 8,
+"scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -346,7 +342,7 @@ state={
 "column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 86,
+"row": 76,
 "scroll_position": 51.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
