Revert "camera refactor"
This reverts commit 7c2d8e2c747a9e29537c357e1a9c5ea32bdd77b4.

--- a/.godot/global_script_class_cache.cfg
+++ b/.godot/global_script_class_cache.cfg
@@ -24,6 +24,14 @@ list=[{
 "path": "res://Scripts/Controllers/AnimationController.gd"
 }, {
 "base": &"Node",
+"class": &"CameraCinema",
+"icon": "",
+"is_abstract": false,
+"is_tool": false,
+"language": &"GDScript",
+"path": "res://Scripts/Camera/CameraCinema.gd"
+}, {
+"base": &"Node",
 "class": &"CameraComponent",
 "icon": "",
 "is_abstract": false,
