--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -3,11 +3,11 @@
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 2,
+"column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 248,
-"scroll_position": 213.0,
+"row": 252,
+"scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -213,11 +213,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 4,
+"column": 14,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 148,
-"scroll_position": 127.0,
+"row": 264,
+"scroll_position": 228.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -278,6 +278,20 @@ state={
 "syntax_highlighter": "GDScript"
 }
 
+[res://Scripts/Camera/CameraCinema.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 0,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 228,
+"scroll_position": 214.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
 [res://Scripts/Camera/CameraComponent.gd]
 
 state={
@@ -300,8 +314,8 @@ state={
 "column": 30,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 346,
-"scroll_position": 312.0,
+"row": 355,
+"scroll_position": 319.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -325,10 +339,10 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 0,
+"column": 17,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 8,
+"row": 1,
 "scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
@@ -339,10 +353,10 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 0,
+"column": 38,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 76,
+"row": 87,
 "scroll_position": 51.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
