--- a/.godot/global_script_class_cache.cfg
+++ b/.godot/global_script_class_cache.cfg
@@ -24,12 +24,20 @@ list=[{
 "path": "res://Scripts/Controllers/AnimationController.gd"
 }, {
 "base": &"Node",
-"class": &"CameraCinema",
+"class": &"CameraActionReceiver",
 "icon": "",
 "is_abstract": false,
 "is_tool": false,
 "language": &"GDScript",
-"path": "res://Scripts/Camera/CameraCinema.gd"
+"path": "res://Scripts/Camera/RIG/CameraActionReciever.gd"
+}, {
+"base": &"Node",
+"class": &"CameraCinemaController",
+"icon": "",
+"is_abstract": false,
+"is_tool": false,
+"language": &"GDScript",
+"path": "res://Scripts/Camera/RIG/CameraCinematicControl.gd"
 }, {
 "base": &"Node",
 "class": &"CameraResponder",
@@ -39,69 +47,21 @@ list=[{
 "language": &"GDScript",
 "path": "res://Scripts/CameraRig/CameraResponder.gd"
 }, {
-"base": &"CameraResponseBase",
-"class": &"CameraResponseAirborne",
+"base": &"Node3D",
+"class": &"CameraRig",
 "icon": "",
 "is_abstract": false,
 "is_tool": false,
 "language": &"GDScript",
-"path": "res://Scripts/Camera/Responses/CameraResponseAirborne.gd"
+"path": "res://Scripts/Camera/RIG/CameraRig.gd"
 }, {
 "base": &"Node",
-"class": &"CameraResponseBase",
+"class": &"CameraStateResponder",
 "icon": "",
 "is_abstract": false,
 "is_tool": false,
 "language": &"GDScript",
-"path": "res://Scripts/Camera/CameraResponseBase.gd"
-}, {
-"base": &"CameraResponseBase",
-"class": &"CameraResponseIdle",
-"icon": "",
-"is_abstract": false,
-"is_tool": false,
-"language": &"GDScript",
-"path": "res://Scripts/Camera/Responses/CameraResponseIdle.gd"
-}, {
-"base": &"CameraResponseBase",
-"class": &"CameraResponseJumping",
-"icon": "",
-"is_abstract": false,
-"is_tool": false,
-"language": &"GDScript",
-"path": "res://Scripts/Camera/Responses/CameraResponseJumping.gd"
-}, {
-"base": &"CameraResponseBase",
-"class": &"CameraResponseLanding",
-"icon": "",
-"is_abstract": false,
-"is_tool": false,
-"language": &"GDScript",
-"path": "res://Scripts/Camera/Responses/CameraResponseLanding.gd"
-}, {
-"base": &"CameraResponseBase",
-"class": &"CameraResponseRunning",
-"icon": "",
-"is_abstract": false,
-"is_tool": false,
-"language": &"GDScript",
-"path": "res://Scripts/Camera/Responses/CameraResponseRunning.gd"
-}, {
-"base": &"CameraResponseBase",
-"class": &"CameraResponseWalking",
-"icon": "",
-"is_abstract": false,
-"is_tool": false,
-"language": &"GDScript",
-"path": "res://Scripts/Camera/Responses/CameraResponseWalking.gd"
-}, {
-"base": &"Node",
-"class": &"CameraStateMachine",
-"icon": "",
-"is_abstract": false,
-"is_tool": false,
-"language": &"GDScript",
-"path": "res://Scripts/Camera/CameraStateMachine.gd"
+"path": "res://Scripts/Camera/RIG/CameraStateResponder.gd"
 }, {
 "base": &"Node",
 "class": &"CharacterDebugHelper",
