--- a/.godot/global_script_class_cache.cfg
+++ b/.godot/global_script_class_cache.cfg
@@ -31,6 +31,110 @@ list=[{
 "language": &"GDScript",
 "path": "res://Scripts/Camera/CameraActionReciever.gd"
 }, {
+"base": &"Node",
+"class": &"CameraCinema",
+"icon": "",
+"is_abstract": false,
+"is_tool": false,
+"language": &"GDScript",
+"path": "res://Scripts/Camera/CameraCinema.gd"
+}, {
+"base": &"Node",
+"class": &"CameraCinemaController",
+"icon": "",
+"is_abstract": false,
+"is_tool": false,
+"language": &"GDScript",
+"path": "res://Scripts/Camera/CameraCinematicControl.gd"
+}, {
+"base": &"Node",
+"class": &"CameraComponent",
+"icon": "",
+"is_abstract": false,
+"is_tool": false,
+"language": &"GDScript",
+"path": "res://Scripts/Camera/CameraComponent.gd"
+}, {
+"base": &"Node3D",
+"class": &"CameraManager",
+"icon": "",
+"is_abstract": false,
+"is_tool": false,
+"language": &"GDScript",
+"path": "res://Scripts/Camera/CameraManager.gd"
+}, {
+"base": &"RefCounted",
+"class": &"CameraProperties",
+"icon": "",
+"is_abstract": false,
+"is_tool": false,
+"language": &"GDScript",
+"path": "res://Scripts/Camera/CameraProperties.gd"
+}, {
+"base": &"Node",
+"class": &"CameraResponder",
+"icon": "",
+"is_abstract": false,
+"is_tool": false,
+"language": &"GDScript",
+"path": "res://Scripts/CameraRig/CameraResponder.gd"
+}, {
+"base": &"CameraResponseBase",
+"class": &"CameraResponseAirborne",
+"icon": "",
+"is_abstract": false,
+"is_tool": false,
+"language": &"GDScript",
+"path": "res://Scripts/Camera/Responses/CameraResponseAirborne.gd"
+}, {
+"base": &"Node",
+"class": &"CameraResponseBase",
+"icon": "",
+"is_abstract": false,
+"is_tool": false,
+"language": &"GDScript",
+"path": "res://Scripts/Camera/CameraResponseBase.gd"
+}, {
+"base": &"CameraResponseBase",
+"class": &"CameraResponseIdle",
+"icon": "",
+"is_abstract": false,
+"is_tool": false,
+"language": &"GDScript",
+"path": "res://Scripts/Camera/Responses/CameraResponseIdle.gd"
+}, {
+"base": &"CameraResponseBase",
+"class": &"CameraResponseJumping",
+"icon": "",
+"is_abstract": false,
+"is_tool": false,
+"language": &"GDScript",
+"path": "res://Scripts/Camera/Responses/CameraResponseJumping.gd"
+}, {
+"base": &"CameraResponseBase",
+"class": &"CameraResponseLanding",
+"icon": "",
+"is_abstract": false,
+"is_tool": false,
+"language": &"GDScript",
+"path": "res://Scripts/Camera/Responses/CameraResponseLanding.gd"
+}, {
+"base": &"CameraResponseBase",
+"class": &"CameraResponseRunning",
+"icon": "",
+"is_abstract": false,
+"is_tool": false,
+"language": &"GDScript",
+"path": "res://Scripts/Camera/Responses/CameraResponseRunning.gd"
+}, {
+"base": &"CameraResponseBase",
+"class": &"CameraResponseWalking",
+"icon": "",
+"is_abstract": false,
+"is_tool": false,
+"language": &"GDScript",
+"path": "res://Scripts/Camera/Responses/CameraResponseWalking.gd"
+}, {
 "base": &"Node3D",
 "class": &"CameraRig",
 "icon": "",
@@ -38,6 +142,14 @@ list=[{
 "is_tool": false,
 "language": &"GDScript",
 "path": "res://Scripts/Camera/CameraRig.gd"
+}, {
+"base": &"Node",
+"class": &"CameraStateMachine",
+"icon": "",
+"is_abstract": false,
+"is_tool": false,
+"language": &"GDScript",
+"path": "res://Scripts/Camera/CameraStateMachine.gd"
 }, {
 "base": &"Node",
 "class": &"CameraStateResponder",
@@ -71,6 +183,14 @@ list=[{
 "language": &"GDScript",
 "path": "res://Scripts/Character/CharacterStateMachine.gd"
 }, {
+"base": &"CameraComponent",
+"class": &"ClickFollowCameraComponent",
+"icon": "",
+"is_abstract": false,
+"is_tool": false,
+"language": &"GDScript",
+"path": "res://Scripts/Camera/ClickFollowCameraComponent.gd"
+}, {
 "base": &"Node",
 "class": &"ClickNavigationComponent",
 "icon": "",
@@ -78,6 +198,14 @@ list=[{
 "is_tool": false,
 "language": &"GDScript",
 "path": "res://Scripts/InputComponents/ClickNavigationComponent.gd"
+}, {
+"base": &"CameraComponent",
+"class": &"FollowCameraComponent",
+"icon": "",
+"is_abstract": false,
+"is_tool": false,
+"language": &"GDScript",
+"path": "res://Scripts/Camera/FollowCameraComponent.gd"
 }, {
 "base": &"Node",
 "class": &"GamepadInputComponent",
