cleanup signal emmision

--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -62,8 +62,8 @@ state={
 "column": 3,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 300,
-"scroll_position": 253.0,
+"row": 263,
+"scroll_position": 216.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -311,16 +311,12 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 14,
+"column": 76,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 34,
-"scroll_position": 0.0,
-"selection": true,
-"selection_from_column": 9,
-"selection_from_line": 34,
-"selection_to_column": 14,
-"selection_to_line": 34,
+"row": 257,
+"scroll_position": 210.0,
+"selection": false,
 "syntax_highlighter": "GDScript"
 }
 
