--- a/.godot/global_script_class_cache.cfg
+++ b/.godot/global_script_class_cache.cfg
@@ -1,20 +1,4 @@
 list=[{
-"base": &"RefCounted",
-"class": &"Action",
-"icon": "",
-"is_abstract": false,
-"is_tool": false,
-"language": &"GDScript",
-"path": "res://Scripts/ActionSystem/Action.gd"
-}, {
-"base": &"Node",
-"class": &"ActionSystem",
-"icon": "",
-"is_abstract": false,
-"is_tool": false,
-"language": &"GDScript",
-"path": "res://Scripts/ActionSystem/ActionSystem.gd"
-}, {
 "base": &"Node",
 "class": &"AnimationController",
 "icon": "",
@@ -96,20 +80,12 @@ list=[{
 "path": "res://Scripts/Components/JumpSystem.gd"
 }, {
 "base": &"Node",
-"class": &"MovementCalculator",
+"class": &"MovementManager",
 "icon": "",
 "is_abstract": false,
 "is_tool": false,
 "language": &"GDScript",
-"path": "res://Scripts/Character/MovementCalculator.gd"
-}, {
-"base": &"Node",
-"class": &"MovementStateManager",
-"icon": "",
-"is_abstract": false,
-"is_tool": false,
-"language": &"GDScript",
-"path": "res://Scripts/Character/MovementStateManager.gd"
+"path": "res://Scripts/Character/MovementManager.gd"
 }, {
 "base": &"Node",
 "class": &"State",
