--- a/.godot/global_script_class_cache.cfg
+++ b/.godot/global_script_class_cache.cfg
@@ -1,11 +1,11 @@
 list=[{
 "base": &"Node",
-"class": &"AnimationController",
+"class": &"AnimationManager",
 "icon": "",
 "is_abstract": false,
 "is_tool": false,
 "language": &"GDScript",
-"path": "res://Scripts/Controllers/AnimationController.gd"
+"path": "res://Scripts/Controllers/AnimationManager.gd"
 }, {
 "base": &"Node3D",
 "class": &"CameraRig",
