--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -9,8 +9,8 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://Scripts/Character/States/StateAirborne.gd")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Scripts/", "res://Scripts/InputComponents/", "res://Scripts/Controllers/", "res://Scripts/Components/", "res://Scripts/Character/", "res://Scripts/Character/States/", "res://Scripts/_Debug/")
+dock_filesystem_selected_paths=PackedStringArray("res://Scripts/Character/States/StateRunning.gd")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Scripts/", "res://Scripts/Controllers/", "res://Scripts/Components/", "res://Scripts/Character/", "res://Scripts/Character/States/", "res://Scripts/3C/")
 dock_node_current_tab=0
 dock_history_include_scene=true
 dock_history_include_global=true
@@ -30,10 +30,10 @@ dock_5="Inspector,Node,History"
 
 open_scenes=PackedStringArray("res://SCENE.tscn")
 current_scene="res://SCENE.tscn"
-center_split_offset=-369
+center_split_offset=-310
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=2
-selected_bottom_panel_item=0
+selected_bottom_panel_item=1
 
 [EditorWindow]
 
@@ -44,8 +44,8 @@ size=Vector2i(3248, 1669)
 
 [ScriptEditor]
 
-open_scripts=["res://Scripts/Controllers/AnimationManager.gd", "res://Scripts/Controllers/CameraRig.gd", "res://Scripts/_Debug/CharacterDebugHelper.gd", "res://Scripts/Character/CharacterStateMachine.gd", "res://Scripts/Character/CharacterStatesBase.gd", "res://character_controller_plan.md", "res://Scripts/InputComponents/ClickNavigationComponent.gd", "res://Scripts/Controllers/ControllerCharacter.gd", "res://Scripts/_Debug/DebugUI.gd", "res://Scripts/InputComponents/InputManager.gd", "res://Scripts/Components/JumpSystem.gd", "res://Scripts/Character/MovementManager.gd", "res://Scripts/Character/State.gd", "res://Scripts/Character/States/StateAirborne.gd", "res://Scripts/Character/States/StateJumping.gd", "res://Scripts/Character/States/StateLanding.gd"]
-selected_script="res://Scripts/InputComponents/ClickNavigationComponent.gd"
+open_scripts=["res://Scripts/3C/3CDebugUI.gd", "res://Scripts/3C/3CPresets.gd", "res://Scripts/Controllers/AnimationManager.gd", "res://Scripts/3C/CameraRig.gd", "res://Scripts/3C/CharacterConfig.gd", "res://Scripts/_Debug/CharacterDebugHelper.gd", "res://Scripts/Character/CharacterStateMachine.gd", "res://Scripts/3C/CharacterStatesBase.gd", "res://character_controller_plan.md", "res://Scripts/InputComponents/ClickNavigationComponent.gd", "res://Scripts/3C/ControllerCharacter.gd", "res://Scripts/_Debug/DebugUI.gd", "res://Scripts/InputComponents/InputManager.gd", "res://Scripts/Components/JumpSystem.gd", "res://Scripts/3C/MovementManager.gd", "res://Scripts/3C/Simple3CTest.gd", "res://Scripts/Character/State.gd", "res://Scripts/Character/States/StateAirborne.gd", "res://Scripts/Character/States/StateIdle.gd", "res://Scripts/Character/States/StateJumping.gd", "res://Scripts/Character/States/StateLanding.gd", "res://Scripts/Character/States/StateRunning.gd", "res://Scripts/Character/States/StateWalking.gd"]
+selected_script="res://Scripts/Character/States/StateRunning.gd"
 open_help=[]
 script_split_offset=522
 list_split_offset=0
