--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -3,10 +3,10 @@
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 21,
+"column": 29,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 63,
+"row": 55,
 "scroll_position": 35.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
@@ -21,20 +21,6 @@ state={
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 33,
-"scroll_position": 8.0,
-"selection": false,
-"syntax_highlighter": "GDScript"
-}
-
-[res://Scripts/Controllers/ControllerCharacter.gd]
-
-state={
-"bookmarks": PackedInt32Array(),
-"breakpoints": PackedInt32Array(),
-"column": 50,
-"folded_lines": Array[int]([]),
-"h_scroll_position": 0,
-"row": 7,
 "scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
@@ -110,20 +96,6 @@ state={
 "syntax_highlighter": "GDScript"
 }
 
-[res://Scripts/Character/CharacterStatesBase.gd]
-
-state={
-"bookmarks": PackedInt32Array(),
-"breakpoints": PackedInt32Array(),
-"column": 21,
-"folded_lines": Array[int]([]),
-"h_scroll_position": 0,
-"row": 94,
-"scroll_position": 69.0,
-"selection": false,
-"syntax_highlighter": "GDScript"
-}
-
 [res://Scripts/Character/State.gd]
 
 state={
@@ -166,34 +138,6 @@ state={
 "syntax_highlighter": "GDScript"
 }
 
-[res://Scripts/Character/MovementManager.gd]
-
-state={
-"bookmarks": PackedInt32Array(),
-"breakpoints": PackedInt32Array(),
-"column": 6,
-"folded_lines": Array[int]([]),
-"h_scroll_position": 0,
-"row": 194,
-"scroll_position": 0.0,
-"selection": false,
-"syntax_highlighter": "GDScript"
-}
-
-[res://Scripts/Controllers/CameraRig.gd]
-
-state={
-"bookmarks": PackedInt32Array(),
-"breakpoints": PackedInt32Array(),
-"column": 1,
-"folded_lines": Array[int]([]),
-"h_scroll_position": 0,
-"row": 162,
-"scroll_position": 129.0,
-"selection": false,
-"syntax_highlighter": "GDScript"
-}
-
 [res://Scripts/InputComponents/InputManager.gd]
 
 state={
@@ -218,6 +162,160 @@ state={
 "h_scroll_position": 0,
 "row": 126,
 "scroll_position": 111.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://Scripts/3C/CharacterConfig.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 55,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 92,
+"scroll_position": 44.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://Scripts/3C/3CPresets.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 21,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 180,
+"scroll_position": 144.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://Scripts/3C/ControllerCharacter.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 46,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 281,
+"scroll_position": 233.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://Scripts/3C/3CDebugUI.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 25,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 153,
+"scroll_position": 104.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://Scripts/3C/MovementManager.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 2,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 192,
+"scroll_position": 144.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://Scripts/3C/CameraRig.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 2,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 281,
+"scroll_position": 233.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://Scripts/3C/Simple3CTest.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 31,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 47,
+"scroll_position": 0.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://Scripts/Character/States/StateIdle.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 27,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 21,
+"scroll_position": 0.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://Scripts/3C/CharacterStatesBase.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 17,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 154,
+"scroll_position": 106.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://Scripts/Character/States/StateWalking.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 27,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 16,
+"scroll_position": 0.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://Scripts/Character/States/StateRunning.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 0,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 17,
+"scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
