--- a/.godot/global_script_class_cache.cfg
+++ b/.godot/global_script_class_cache.cfg
@@ -13,7 +13,15 @@ list=[{
 "is_abstract": false,
 "is_tool": false,
 "language": &"GDScript",
-"path": "res://Scripts/Controllers/CameraRig.gd"
+"path": "res://Scripts/3C/CameraRig.gd"
+}, {
+"base": &"Resource",
+"class": &"CharacterConfig",
+"icon": "",
+"is_abstract": false,
+"is_tool": false,
+"language": &"GDScript",
+"path": "res://Scripts/3C/CharacterConfig.gd"
 }, {
 "base": &"Node",
 "class": &"CharacterDebugHelper",
@@ -29,7 +37,7 @@ list=[{
 "is_abstract": false,
 "is_tool": false,
 "language": &"GDScript",
-"path": "res://Scripts/Character/CharacterStatesBase.gd"
+"path": "res://Scripts/3C/CharacterStatesBase.gd"
 }, {
 "base": &"Node",
 "class": &"CharacterStateMachine",
@@ -77,7 +85,7 @@ list=[{
 "is_abstract": false,
 "is_tool": false,
 "language": &"GDScript",
-"path": "res://Scripts/Character/MovementManager.gd"
+"path": "res://Scripts/3C/MovementManager.gd"
 }, {
 "base": &"Node",
 "class": &"State",
@@ -134,4 +142,12 @@ list=[{
 "is_tool": false,
 "language": &"GDScript",
 "path": "res://Scripts/Character/States/StateWalking.gd"
+}, {
+"base": &"Resource",
+"class": &"TCPresets",
+"icon": "",
+"is_abstract": false,
+"is_tool": false,
+"language": &"GDScript",
+"path": "res://Scripts/3C/3CPresets.gd"
 }]
